resources/other/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-istio
  labels:
    name: grpc-istio
#---
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: test
#  labels:
#    name: test
